# optitrack-stream-client

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  client_app.cpp  interface_app.cpp
stream_client/: CMakeLists.txt  client.cpp  client_interface.cpp
stream_client/include/: client.h  client_interface.h  shared_data.h
